# PS1Compiler

./: .gitignore  Makefile  README.md  code.psx  code2.psx  code3.psx  com_all.py  compile_all.py  dune  errors.txt  expr.psx  grammar.txt  integration_test.py  output_code.psx.c  output_code.psx.dep  psyqcompiler  snake_demo.map
_build/: .db  .digest-db  log
_build/default/: Makefile  README.md  code.psx  dune-project
compile/c_output/: output_code.c  output_code.dep  output_code.psx.c  output_code.psx.dep  output_code2.c  output_code2.dep  output_code3.c  output_code3.dep  output_test.c  output_test.dep  output_test_sum.c
compile/input/: code.psx  code2.psx  code3.psx  (+2 more)
scripts/: run_speedtest.bash  runtest.bash
src/: ast_printer.ml  cformatter.ml  codegen.ml  compile.ml  ctree.mli  ctree.mlingenting  ctree_printer.ml  depricated_codegen.ml  dune  graphics_import.ml  libary_importer.ml  main.ml  psx_imports.ml  type_check.ml
src/ctree/: ctree.mli  dune
src/frontend/: interp.ml
src/frontend/ast/: ast.ml  ast.mli  dune
src/frontend/lexer/: README.md  dune  lexer.mll  token.ml
src/frontend/parser/: ast.ml  dune  lexer.mll  oldToken.ml  parser.conflicts  parser.mly  token.ml
test/: dune  test_cformatter.ml  test_lexer.ml  test_main.ml  test_parser.ml
test/integration_test/actual_files/: output_test_arrays.c  output_test_class.c
test/integration_test/expected_files/: test_arrays.c  test_class.c  test_sum.c
test/integration_test/psx_files/: test_arrays.psx  test_class.psx  test_sum.psx
tests/: expr.psx  functions.psx  lextest.py  speedtest.py
(+86 files in other folders)
